Implemented tests